🩹 Fixed dark mode's settings

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,7 @@
 // app global css
 
 // ダークモード共通スタイル
-.dark {
+.body--dark {
   .text-grey {
     color: $grey-5;
   }
@@ -115,7 +115,7 @@
   }
 }
 
-.dark {
+.body--dark {
   ::-webkit-scrollbar-track {
     background: $grey-8;
   }
